--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,322 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+.header{
+  height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  padding: 10px 10px 0 10px;
+  background-image: var(--background-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
-.page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+.decorated-zone::after{
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decoration-color);
+  border-right: 1px solid var(--decoration-color);
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.decorated-zone::before{
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--decoration-color);
+  border-left: 1px solid var(--decoration-color);
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+}
+
+.decoration{
+  position: absolute;
+  right: 38px;
+  top: 10px;
+  color: var(--accent-color);
+  text-align: center;
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px; 
+}
+
+.decoration::after{
+  content: '';
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 8px;
+  width: 9px;
+  height: 9px;
+  background-color: var(--accent-color);
+  border-radius: 50% ;
+  box-shadow: 0px 0px 6px 3px var(--accent-color);  
+}
+
+.title_container{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.title{
+  color: var(--title-color);
+  text-shadow: 4px 4px 0px var(--accent-color);
+  font-family: 'IBM Plex mono';
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82.5%;
+
+}
+
+.subtitle_container{
+  display: flex;
+  align-items: center;
+}
+
+.header__theme-menu{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.header__theme-menu-list{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap:10px;
+ }
+
+.header__theme-menu-button{
+  background-color: transparent;
+  border: none;
+  display: inline-flex;
+  height: 26px;
+  padding: 0px 13px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  color: var(--decoration-color);
+  text-align: center;
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.header__theme-menu-button:hover{
+  outline: 1px solid var(--border-color);
+ }
+
+.header__theme-menu-button_active{
+  pointer-events: none;
+ }
+   
+.header__theme-menu-button:focus-visible{
+  outline: none;
+  border-bottom: 1px solid var(--decoration-color);
+ }
+
+.subtitle{
+  color: var(--subtitle-color);
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%;
+  background-color: var(--accent-color);
+}
+
+.link{
+  text-shadow: 2px 2px 0px var(--accent-color);
+  text-decoration: none;
+}
+
+.link:hover{
+  border-bottom: 1px solid var(--text-color);
+}
+
+.link:focus-visible{
+  outline: 1px solid var(--text-color);
+}
+
+.section:not(:last-child){
+  margin-bottom: 50px;
+}
+
+.section_title{
+  color: var(--section-title-color);
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%;
+}
+
+.section_subtitle{
+  margin:20px 0 10px 0;
+}
+
+.section_text{
+  color: var(--text-color);
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130%;
+}
+
+.main{
+  padding: 40px 10px 40px 10px;
+  background-color: var(--background-color);
+}
+
+.sub{
+  font-weight: 400;
+}
+
+.img{
+  width: 100%;
+}
+
+.block_images{
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.footer{
+  height: 100vh;
+  padding: 0 10px 0 10px;
+  position: relative;
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
+.footer-title{
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+@media (width>767px){
+  .header{
+    padding: 0;
+  }
+
+  .title{
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .main{
+    padding: 60px 20px 60px 20px;
+  }
+
+  .subtitle_container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 20px;
+  }
+
+  .header_subtitle{
+    grid-column: 2;
+  }
+
+  .section:nth-child(3n) .section_subtitle:not(.sub),
+  .section:nth-child(4n) .section_subtitle{
+    margin-bottom: 20px;
+  }
+
+  .block:not(:last-child){
+    margin-bottom: 10px;
+  }
+
+  .section:not(:last-child){
+    margin-bottom:80px;
+    display: grid;
+    grid-template-columns: 1fr 2fr ;
+    gap:20px;
+  }
+
+  .section_title{
+    grid-column: 1;
+  }
+
+  .section_block{
+    grid-column: 2;
+  }
+
+  .section_subtitle{
+    margin:0 0 10px 0;
+  }
+
+  .section:nth-child(2n) .section_block{
+    grid-column:1/3;
+  }
+
+  .block_images{
+    display: grid;
+    grid-template: repeat(3, auto) / repeat(3, auto);
+    gap:20px;
+  }
+
+  .img:first-of-type,
+  .img:last-of-type {
+    grid-column: span 2;
+  }
+  
+  .img:nth-of-type(2),
+  .img:nth-of-type(3) {
+    grid-row: span 2;
+  }
+
+  .img{
+    object-fit: cover;
+   width: 100%;
+    height: 100%;
+  }
+
+  .decorated-zone::after{
+    right: 20px;
+    top: 20px;
+  }
+
+  .decorated-zone::before{
+    left: 20px;
+    bottom: 20px;
+  }
+
+  .decoration{
+    top: 20px;
+    right: 48px;
+  }
+}
+
+@media (width>1023px){
+  .section:nth-child(2n){
+    grid-template: repeat(2, auto)/repeat(3, 1fr);
+  }
+
+  .section:nth-child(2n) .section_block{
+    grid-row:2/4;
+    grid-column: auto;
+  }
+  
+  .header__theme-menu-list{
+    flex-direction: row;
+  }
+
+  .header__theme-menu{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    margin-top: 20px;
+  }
 }
