--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,19 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-.header{
+.header {
   height: 100vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   padding: 10px 10px 0 10px;
+ 
+}
+.page {
   background-image: var(--background-image);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
 
-.decorated-zone::after{
+.decorated-zone::after {
   content: '';
   width: 25px;
   height: 25px;
@@ -21,7 +24,7 @@
   top: 10px;
 }
 
-.decorated-zone::before{
+.decorated-zone::before {
   content: '';
   width: 25px;
   height: 25px;
@@ -32,20 +35,20 @@
   bottom: 10px;
 }
 
-.decoration{
-  position: absolute;
-  right: 38px;
-  top: 10px;
-  color: var(--accent-color);
-  text-align: center;
+.decoration {
   font-family: "IBM Plex Mono";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 25px; 
+  position: absolute;
+  right: 38px;
+  top: 10px;
+  color: var(--accent-color);
+  text-align: center;
 }
 
-.decoration::after{
+.decoration::after {
   content: '';
   position: absolute;
   margin-left: 10px;
@@ -57,35 +60,34 @@
   box-shadow: 0px 0px 6px 3px var(--accent-color);  
 }
 
-.title_container{
+.title_container {
   display: flex;
   justify-content: start;
   align-items: center;
 }
 
-.title{
-  color: var(--title-color);
-  text-shadow: 4px 4px 0px var(--accent-color);
+.title {
   font-family: 'IBM Plex mono';
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
   font-weight: 700;
   line-height: 82.5%;
-
+  color: var(--title-color);
+  text-shadow: 4px 4px 0px var(--accent-color);
 }
 
-.subtitle_container{
+.subtitle_container {
   display: flex;
   align-items: center;
 }
 
-.header__theme-menu{
+.header__theme-menu {
   display: flex;
   align-items: center;
   justify-content: end;
 }
 
-.header__theme-menu-list{
+.header__theme-menu-list {
   list-style-type: none;
   display: flex;
   flex-direction: column;
@@ -93,106 +95,107 @@
   gap:10px;
  }
 
-.header__theme-menu-button{
+.header__theme-menu-button {
+  font-family: "IBM Plex Mono";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
   background-color: transparent;
   border: none;
   display: inline-flex;
-  height: 26px;
+  height: 26px; 
   padding: 0px 13px;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
   color: var(--decoration-color);
   text-align: center;
-  font-family: "IBM Plex Mono";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 18px;
+ 
 }
 
-.header__theme-menu-button:hover{
+.header__theme-menu-button:hover {
   outline: 1px solid var(--border-color);
  }
 
-.header__theme-menu-button_active{
+.header__theme-menu-button_active {
   pointer-events: none;
  }
    
-.header__theme-menu-button:focus-visible{
+.header__theme-menu-button:focus-visible {
   outline: none;
   border-bottom: 1px solid var(--decoration-color);
  }
 
-.subtitle{
-  color: var(--subtitle-color);
+.subtitle {
   font-family: "IBM Plex Mono";
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
+  color: var(--subtitle-color);
   line-height: 130%;
   background-color: var(--accent-color);
 }
 
-.link{
+.link {
   text-shadow: 2px 2px 0px var(--accent-color);
   text-decoration: none;
 }
 
-.link:hover{
+.link:hover {
   border-bottom: 1px solid var(--text-color);
 }
 
-.link:focus-visible{
+.link:focus-visible {
   outline: 1px solid var(--text-color);
 }
 
-.section:not(:last-child){
+.section:not(:last-child) {
   margin-bottom: 50px;
 }
 
-.section_title{
-  color: var(--section-title-color);
+.section_title {
   font-family: "IBM Plex Mono";
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 130%;
+  color: var(--section-title-color);
 }
 
-.section_subtitle{
+.section_subtitle {
   margin:20px 0 10px 0;
 }
 
-.section_text{
-  color: var(--text-color);
+.section_text {
   font-family: "IBM Plex Mono";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 130%;
+  color: var(--text-color);
 }
 
-.main{
+.main {
   padding: 40px 10px 40px 10px;
   background-color: var(--background-color);
 }
 
-.sub{
+.sub {
   font-weight: 400;
 }
 
-.img{
+.img {
   width: 100%;
 }
 
-.block_images{
+.block_images {
   display: flex;
   gap: 10px;
   flex-direction: column;
 }
 
-.footer{
+.footer {
   height: 100vh;
   padding: 0 10px 0 10px;
   position: relative;
@@ -202,66 +205,66 @@
   align-items: center;
 }
   
-.footer-title{
+.footer-title {
   text-shadow: 2px 2px 0px var(--accent-color);
 }
 
-@media (width>767px){
-  .header{
+@media (width>767px) {
+  .header {
     padding: 0;
   }
 
-  .title{
+  .title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .main{
+  .main {
     padding: 60px 20px 60px 20px;
   }
 
-  .subtitle_container{
+  .subtitle_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin: 0 20px;
   }
 
-  .header_subtitle{
+  .header_subtitle {
     grid-column: 2;
   }
 
   .section:nth-child(3n) .section_subtitle:not(.sub),
-  .section:nth-child(4n) .section_subtitle{
+  .section:nth-child(4n) .section_subtitle {
     margin-bottom: 20px;
   }
 
-  .block:not(:last-child){
-    margin-bottom: 10px;
+  .block:not(:last-child) {
+    margin-bottom: 20px;
   }
 
-  .section:not(:last-child){
+  .section:not(:last-child) {
     margin-bottom:80px;
     display: grid;
     grid-template-columns: 1fr 2fr ;
     gap:20px;
   }
 
-  .section_title{
+  .section_title {
     grid-column: 1;
   }
 
-  .section_block{
+  .section_block {
     grid-column: 2;
   }
 
-  .section_subtitle{
+  .section_subtitle {
     margin:0 0 10px 0;
   }
 
-  .section:nth-child(2n) .section_block{
+  .section:nth-child(2n) .section_block {
     grid-column:1/3;
   }
 
-  .block_images{
+  .block_images {
     display: grid;
     grid-template: repeat(3, auto) / repeat(3, auto);
     gap:20px;
@@ -277,43 +280,43 @@
     grid-row: span 2;
   }
 
-  .img{
+  .img {
     object-fit: cover;
    width: 100%;
     height: 100%;
   }
 
-  .decorated-zone::after{
+  .decorated-zone::after {
     right: 20px;
     top: 20px;
   }
 
-  .decorated-zone::before{
+  .decorated-zone::before {
     left: 20px;
     bottom: 20px;
   }
 
-  .decoration{
+  .decoration {
     top: 20px;
     right: 48px;
   }
 }
 
-@media (width>1023px){
-  .section:nth-child(2n){
+@media (width>1023px) {
+  .section:nth-child(2n) {
     grid-template: repeat(2, auto)/repeat(3, 1fr);
   }
 
-  .section:nth-child(2n) .section_block{
+  .section:nth-child(2n) .section_block {
     grid-row:2/4;
     grid-column: auto;
   }
   
-  .header__theme-menu-list{
+  .header__theme-menu-list {
     flex-direction: row;
   }
 
-  .header__theme-menu{
+  .header__theme-menu {
     display: flex;
     justify-content: center;
     align-items: start;
