--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 .header {
-  height: 100vh;
+  block-size: 100vh;
+  min-height: 668px;
+  position: relative;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 1fr auto 1fr;
   padding: 10px 10px 0 10px;
  
 }
@@ -36,11 +37,12 @@
 }
 
 .decoration {
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 25px; 
+  text-transform: uppercase;
   position: absolute;
   right: 38px;
   top: 10px;
@@ -51,10 +53,10 @@
 .decoration::after {
   content: '';
   position: absolute;
-  margin-left: 10px;
-  margin-top: 8px;
-  width: 9px;
-  height: 9px;
+  margin-inline-start: 10px;
+  margin-block-start: 8px;
+  inline-size: 9px;
+  block-size: 9px;
   background-color: var(--accent-color);
   border-radius: 50% ;
   box-shadow: 0px 0px 6px 3px var(--accent-color);  
@@ -67,7 +69,7 @@
 }
 
 .title {
-  font-family: 'IBM Plex mono';
+  font-family: 'IBM Plex mono', monospace;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-style: normal;
   font-weight: 700;
@@ -96,22 +98,22 @@
  }
 
 .header__theme-menu-button {
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 18px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
   display: inline-flex;
-  height: 26px; 
+  block-size: 26px; 
   padding: 0px 13px;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
   color: var(--decoration-color);
   text-align: center;
- 
 }
 
 .header__theme-menu-button:hover {
@@ -128,7 +130,7 @@
  }
 
 .subtitle {
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -147,7 +149,8 @@
 }
 
 .link:focus-visible {
-  outline: 1px solid var(--text-color);
+  outline: none;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .section:not(:last-child) {
@@ -155,7 +158,7 @@
 }
 
 .section_title {
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -168,7 +171,7 @@
 }
 
 .section_text {
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -178,15 +181,10 @@
 
 .main {
   padding: 40px 10px 40px 10px;
-  background-color: var(--background-color);
 }
 
 .sub {
   font-weight: 400;
-}
-
-.img {
-  width: 100%;
 }
 
 .block_images {
@@ -195,11 +193,18 @@
   flex-direction: column;
 }
 
+.img {
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
 .footer {
-  height: 100vh;
+  block-size: 100vh;
+  min-block-size: 668px;
   padding: 0 10px 0 10px;
   position: relative;
-  background-color: var(--background-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -214,6 +219,9 @@
     padding: 0;
   }
 
+  .header__theme-menu{
+    margin: 20px 20px 0 20px;
+  }
   .title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
@@ -225,7 +233,7 @@
   .subtitle_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin: 0 20px;
+    margin: 0 20px 20px 20px;
   }
 
   .header_subtitle {
@@ -234,15 +242,15 @@
 
   .section:nth-child(3n) .section_subtitle:not(.sub),
   .section:nth-child(4n) .section_subtitle {
-    margin-bottom: 20px;
+    margin-block-end: 20px;
   }
 
   .block:not(:last-child) {
-    margin-bottom: 20px;
+    margin-block-end: 20px;
   }
 
   .section:not(:last-child) {
-    margin-bottom:80px;
+    margin-block-end:80px;
     display: grid;
     grid-template-columns: 1fr 2fr ;
     gap:20px;
@@ -280,12 +288,6 @@
     grid-row: span 2;
   }
 
-  .img {
-    object-fit: cover;
-   width: 100%;
-    height: 100%;
-  }
-
   .decorated-zone::after {
     right: 20px;
     top: 20px;
@@ -320,6 +322,6 @@
     display: flex;
     justify-content: center;
     align-items: start;
-    margin-top: 20px;
+    margin-block-start: 20px;
   }
 }
