--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,7 +11,12 @@
   --border-color:#ff007066;
 }
 
-.page.theme_auto .header__theme-menu-button_type_auto{
+.page.theme_auto .header__theme-menu-button_type_auto {
   outline: 1px solid var(--decoration-color);
 }
 
+@media (prefers-color-scheme: light) {
+  .decoration{
+    display: none;
+  }
+}
