--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,12 @@
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
-  padding: 10px 10px 0 10px;
+  padding: 10px;
  
 }
 .page {
-  background: var(--background-image), var(--background-color);
+  background-color: var(--background-color);
+  background-image: var(--background-image);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -53,8 +54,8 @@
 .decoration::after {
   content: '';
   position: absolute;
-  margin-inline-start: 10px;
-  margin-block-start: 8px;
+  top: 8px;
+  left: .section_text:not(:last-child);
   inline-size: 9px;
   block-size: 9px;
   background-color: var(--accent-color);
@@ -187,6 +188,10 @@
   font-weight: 400;
 }
 
+.section_text:not(:last-child){
+  margin-bottom: 10px;
+}
+
 .block_images {
   display: flex;
   gap: 10px;
@@ -239,6 +244,10 @@
   .header_subtitle {
     grid-column: 2;
   }
+
+.section_text:not(:last-child){
+  margin-bottom: 20px;
+}
 
   .section:nth-child(3n) .section_subtitle:not(.sub),
   .section:nth-child(4n) .section_subtitle {
@@ -307,19 +316,24 @@
 @media (width>1023px) {
   .section:nth-child(2n) {
     grid-template: repeat(2, auto)/repeat(3, 1fr);
+    grid-auto-columns: 1fr;
+    
   }
 
   .section:nth-child(2n) .section_block {
     grid-row:2/4;
     grid-column: auto;
   }
-  
+
+  .section:not(:nth-child(2n)) {
+    grid-template-columns: 1fr 2.06fr ;
+  }
+ 
   .header__theme-menu-list {
     flex-direction: row;
   }
 
   .header__theme-menu {
-    display: flex;
     justify-content: center;
     align-items: start;
     margin-block-start: 20px;
