--- a/styles/light.css
+++ b/styles/light.css
@@ -19,6 +19,9 @@
   --decoration-color :var(--text-color);
   --border-color: #32312D66;
 }
+.decoration {
+  display: none;
+}
 }
 
 .page.theme_light {
